Add 4 widgets to simulate FS home screen

--- a/index.html
+++ b/index.html
@@ -13,19 +13,50 @@
         <script src="assets/js/index.js"></script>
     </head>
     <body>
-        <div class="grid-stack">
-            <div class="grid-stack-item"
-                data-gs-x="0" data-gs-y="0"
-                data-gs-width="4" data-gs-height="2">
-                    <div class="grid-stack-item-content">
-                        <p>hello</p>
-                    </div>
+        <div class="col-sm-12 well">
+            <!-- gridstack.js elements go here -->
+            <div class="grid-stack">
+              <div class="grid-stack-item" data-gs-x="0" data-gs-y="0" data-gs-width="2" data-gs-height="2">
+                <div class="grid-stack-item-content panel panel-primary">
+                  <div class="panel-heading">
+                    <h3 class="panel-title">Widget 1</h3>
+                  </div>
+                  <div class=panel-body">
+                    content here
+                  </div>
+                </div>
+              </div>
+              <div class="grid-stack-item" data-gs-x="2" data-gs-y="0" data-gs-width="2" data-gs-height="2">
+                <div class="grid-stack-item-content panel panel-success">
+                  <div class="panel-heading">
+                    <h3 class="panel-title">Widget 2</h3>
+                  </div>
+                  <div class=panel-body">
+                    content here
+                  </div>
+                </div>
+              </div>
+              <div class="grid-stack-item" data-gs-x="0" data-gs-y="2" data-gs-width="3" data-gs-height="2">
+                <div class="grid-stack-item-content panel panel-warning">
+                  <div class="panel-heading">
+                    <h3 class="panel-title">Widget 3</h3>
+                  </div>
+                  <div class=panel-body">
+                    content here
+                  </div>
+                </div>
+              </div>
+              <div class="grid-stack-item" data-gs-x="0" data-gs-y="0" data-gs-width="2" data-gs-height="2">
+                <div class="grid-stack-item-content panel panel-primary">
+                  <div class="panel-heading">
+                    <h3 class="panel-title">Widget 4</h3>
+                  </div>
+                  <div class=panel-body">
+                    content here
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="grid-stack-item"
-                data-gs-x="4" data-gs-y="0"
-                data-gs-width="4" data-gs-height="4">
-                    <div class="grid-stack-item-content"></div>
-            </div>
-        </div>
+          </div>
     </body>
 </html>
